# incremental_rust_game

./: .gitignore  AGENTS.md  BUILD.bat  Cargo.toml  LICENSE  README.md  index.html  setup.sh
.github/workflows/: auto-merge-codex.yml  auto-merge.yml  ci.yml  codeql.yml
pkg/: incremental_rust_game.d.ts  incremental_rust_game.js  incremental_rust_game_bg.wasm  incremental_rust_game_bg.wasm.d.ts  wasm_base64.js
scripts/: embed_wasm.py
src/: achievements.rs  buildings.rs  events.rs  lib.rs  prestige.rs  research.rs  resources.rs  systems.rs  upgrades.rs
src/ui/: app.js  components.js
tests/: game.rs  global.rs  integration.rs
ui/: index.html  main.js  style.css
