[package]
name = "incremental_rust_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console","Window","Document"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.21"

# For better control over time and async features
futures = "0.3"
js-sys = "0.3"
rand = "0.8"

[dev-dependencies]
